# src/Prezentownik.WebApi/Modules/UserLists/DTOs/ReorderItemsRequest.cs
@@ -1,0 +1,4 @@
+namespace Prezentownik.WebApi.Modules.UserLists.DTOs;
+
+public record ReorderItemsRequest(
+    List<Guid> ItemIds);
